Updated buttons to use common style for easy modifying

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,4 +5,18 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="button_1_thru_5">
+        <item name="android:textSize">20dp</item>
+        <item name="android:layout_width">300dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:background">@color/button</item>
+        <item name="android:layout_marginBottom">20dp</item>
+    </style>
+
+    <style name="button6" parent="button_1_thru_5">
+        <item name="android:background">@color/button2</item>
+        <item name="android:textColor">#FAFAFA</item>
+    </style>
+
 </resources>
