--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,69 +15,38 @@
         android:paddingBottom="45dp" />
 
     <Button android:id="@+id/button1"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:theme="@style/ButtonText"
+        style="@style/button_1_thru_5"
+        android:layout_below="@+id/title"
         android:text="@string/app1"
-        android:background="@color/button"
-        android:layout_below="@id/title"
-        android:layout_marginBottom="20dp"
         android:onClick="launchApp" />
 
     <Button android:id="@+id/button2"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:theme="@style/ButtonText"
+        style="@style/button_1_thru_5"
         android:text="@string/app2"
-        android:background="@color/button"
         android:layout_below="@+id/button1"
-        android:layout_marginBottom="20dp"
         android:onClick="launchApp" />
 
     <Button android:id="@+id/button3"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:theme="@style/ButtonText"
+        style="@style/button_1_thru_5"
         android:text="@string/app3"
-        android:background="@color/button"
         android:layout_below="@+id/button2"
-        android:layout_alignStart="@+id/button2"
-        android:layout_marginBottom="20dp"
         android:onClick="launchApp" />
 
     <Button android:id="@+id/button4"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:theme="@style/ButtonText"
+        style="@style/button_1_thru_5"
         android:text="@string/app4"
-        android:background="@color/button"
-        android:layout_centerVertical="true"
-        android:layout_alignStart="@+id/button3"
-        android:layout_marginBottom="20dp"
+        android:layout_below="@+id/button3"
         android:onClick="launchApp" />
 
     <Button android:id="@+id/button5"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:theme="@style/ButtonText"
+        style="@style/button_1_thru_5"
         android:text="@string/app5"
-        android:background="@color/button"
         android:layout_below="@+id/button4"
-        android:layout_marginBottom="20dp"
         android:onClick="launchApp" />
 
     <Button android:id="@+id/button6"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:theme="@style/Button2Text"
+        style="@style/button6"
         android:text="@string/app6"
-        android:background="@color/button2"
         android:layout_below="@+id/button5"
         android:onClick="launchApp" />
 
