--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,11 +7,13 @@
 
     <style name="button_1_thru_5">
         <item name="android:textSize">20dp</item>
-        <item name="android:layout_width">300dp</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_centerHorizontal">true</item>
         <item name="android:background">@color/button</item>
         <item name="android:layout_marginBottom">20dp</item>
+        <item name="android:layout_marginLeft">40dp</item>
+        <item name="android:layout_marginRight">40dp</item>
     </style>
 
     <style name="button6" parent="button_1_thru_5">
